build the mobile version of design two. Fixed the footer alignment of design one.

--- a/src/components/designOne/designOne.css
+++ b/src/components/designOne/designOne.css
@@ -4,3 +4,11 @@
     height: 100vh;
     margin: auto;
 }
+
+@media only screen and (max-width: 900px){
+    .design-one{
+        width: 100vw;
+        height: 100vh;
+        margin: auto;
+    }    
+}
