--- a/src/components/designOne/navbarOne/navbarOne.css
+++ b/src/components/designOne/navbarOne/navbarOne.css
@@ -34,6 +34,7 @@
     }
 }
 
+/* Small screen */
 @media only screen and (max-width: 699px){
 
     .d1-main-menu{
@@ -86,6 +87,7 @@
         flex-direction: column;
         justify-content: space-around;
         z-index: 10;
+        margin-right: 1.3rem;
     }
 
     .d1-hamburger-menu:hover{
