--- a/src/components/designTwo/mainContent/content.css
+++ b/src/components/designTwo/mainContent/content.css
@@ -1,14 +1,15 @@
 *{
     --primary-color: rgb(59, 184, 223);
 }
-/* Large Screens */
-/* Change grid layout to:
 
-    main    main    service
-    main    main    service
-    img     img     service
-    footer  footer  footer
-*/
+.title-flex-container{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+/* Large Screens */
 @media only screen and (min-width: 900px){
     .content-wrapper{
         display: grid;
@@ -16,7 +17,7 @@
         grid-template-rows: 1fr 4fr 2fr 2fr 0.2fr;
         margin: 0;
         /* height: calc(100vh - 80px); */
-        height: 110vh;
+        height: 107vh;
     }
 
     .title-wrapper{
@@ -25,13 +26,6 @@
         justify-content: center;
         align-items: center;
         grid-area: 1 / 1 / 3 / 3;
-    }
-
-    .title-flex-container{
-        position: relative;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
     }
 
     .title-wrapper h1{
@@ -49,13 +43,19 @@
         border-radius: 10px;
         margin-top: 0.5rem;
         background-color: rgb(194, 241, 255);
-        animation: slogan 60s linear infinite;
+        animation: slogan 40s linear infinite;
     }
 
     .highlight-border h3{
         color: black;
         font-size: 2rem;
-        animation: sloganText 60s linear infinite;
+        animation: sloganText 40s linear infinite;
+    }
+
+    .title-wrapper h2{
+        margin-left: 2rem;
+        font-size: 6rem;
+        color: white;
     }
 
     @keyframes sloganText{
@@ -78,7 +78,7 @@
             opacity: 0;
         }
     }
-
+    
     @keyframes slogan {
         0%{
             width: 20px;
@@ -98,12 +98,6 @@
         100%{
             width: 20px;
         }
-    }
-
-    .title-wrapper h2{
-        margin-left: 2rem;
-        font-size: 6rem;
-        color: white;
     }
 
     .sub-wrapper{
@@ -383,8 +377,177 @@
 @media only screen and (max-width: 900px){
     .content-wrapper{
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 0.3fr;
         margin: 0;
+    }
+
+    .bottom-image{
+        display: none;
+    }
+
+    .title-wrapper{
+        background-color: rgb(80, 80, 80);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        grid-area: 1 / 1 / 2 / 2;
+    }
+
+    .title-wrapper h1{
+        font-size: 4rem;
+        color: var(--primary-color);
+    }
+
+    .highlight-border{
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 80px;
+        width: 20px;
+        border-radius: 10px;
+        margin-top: 0.5rem;
+        background-color: rgb(194, 241, 255);
+        animation: slogan 30s linear infinite;
+    }
+
+    .highlight-border h3{
+        color: black;
+        font-size: 1.2rem;
+        animation: sloganText 30s linear infinite;
+    }
+
+    .title-wrapper h2{
+        margin-left: 2rem;
+        font-size: 4rem;
+        color: white;
+    }
+
+    .sub-wrapper{
+        display: flex;
+        align-items: center;
+    }
+
+    @keyframes sloganText{
+        0%{
+            opacity: 0;
+        }
+        22%{
+            opacity: 0;
+        }
+        23%{
+            opacity: 1;
+        }
+        33%{
+            opacity: 1;
+        }
+        34%{
+            opacity: 0;
+        }
+        100%{
+            opacity: 0;
+        }
+    }
+    
+    @keyframes slogan {
+        0%{
+            width: 20px;
+        }
+        20%{
+            width: 20px;
+        }
+        21%{
+            width: 360px;
+        }
+        35%{
+            width: 360px;
+        }
+        36%{
+            width: 20px;
+        }
+        100%{
+            width: 20px;
+        }
+    }
+
+    .information{
+        background-color: rgb(194, 241, 255);
+        grid-area: 2 / 1 / 3 / 2;
+    }
+
+    .information .flex-information{
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+    }
+
+    .services h1{
+        text-align: center;
+        font-size: 2rem;
+        margin-bottom: 1rem;
+    }
+
+    .services p{
+        padding: 0.5rem 1rem;
+    }
+
+    .service-button{
+        margin: 1rem auto 1rem;
+        padding: 0.5rem 1rem;
+        background-color: rgb(28, 125, 253);
+        color: white;
+        width: 30%;
+        text-align: center;
+    }
+
+    .serviceOne{
+        border-top: 2px solid black;
+    }
+
+    .serviceTwo{
+        border-top: 2px solid black;
+    }
+
+    .serviceThree{
+        border-top: 2px solid black;
+    }
+
+    .serviceFour{
+        border-top: 2px solid black;
+        border-bottom: 2px solid black;
+    }
+
+    footer{
+        padding: 1rem;
+        background-color: rgb(29, 29, 29);
+        grid-area: 3 / 1 / 4 / 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    footer .flex-list-wrapper{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: flex-start;
+    }
+
+    footer .flex-list-wrapper ul li{
+        color: white;
+    }
+
+    footer .flex-list-wrapper ul li:hover{
+        color: rgb(89, 208, 255);
+    }
+
+    .list-header{
+        font-size: 1rem;
+        margin-bottom: 1rem;
+        color: rgb(89, 208, 255);
+        padding-bottom: 0.5rem;
+        border-bottom: 2px solid white;
     }
 }
